--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,21 @@
 ---
 ---
 
+@unpublished{mathresearchwithcolin,
+  author = {Colin Pirillo, Seth Sabar},
+  title  = {Hurwitz Orbits of Equal Size},
+  abstract = {We provide a variety of cases in which two factorizations have Hurwitz orbits of the same size. 
+  We begin with prototypical results about factorizations of length two, and show that cycling elements or flipping 
+  and inverting elements in any factorization preserves Hurwitz orbit size. We prove that "double reverse" 
+  factorizations in groups with special presentations have Hurwitz orbits of equal size, and end with applications to 
+  complex reflection groups.},
+  howpublished = "\url{https://arxiv.org/abs/2102.01145}",
+  year   = {2021}
+}
+
+
+
+
 @string{aps = {American Physical Society,}}
 
 @book{einstein1956investigations,
