--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,8 @@
   and inverting elements in any factorization preserves Hurwitz orbit size. We prove that "double reverse" 
   factorizations in groups with special presentations have Hurwitz orbits of equal size, and end with applications to 
   complex reflection groups.},
-  howpublished = "\url{https://arxiv.org/abs/2102.01145}",
+  arxiv = {https://arxiv.org/abs/2102.01145},
+  pdf = {https://arxiv.org/pdf/2102.01145.pdf},
   year   = {2021}
 }
 
