--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,12 +9,21 @@
   and inverting elements in any factorization preserves Hurwitz orbit size. We prove that "double reverse" 
   factorizations in groups with special presentations have Hurwitz orbits of equal size, and end with applications to 
   complex reflection groups.},
-  arxiv = {https://arxiv.org/abs/2102.01145},
+  arxiv = {2102.01145},
   pdf = {https://arxiv.org/pdf/2102.01145.pdf},
   year   = {2021}
 }
 
-
+@unpublished{mathresearchwithgwgroup,
+  author = {Gaurav Gawankar, Dounia Lazreq, Mehr Rai, Seth Sabar},
+  title  = {Hurwitz Actions on Reflection Factorizations in Complex Reflection Group $G_6$},
+  abstract = {We show that in the complex reflection group G6, reflection factorizations of a Coxeter 
+  element that have the same length and multiset of conjugacy classes are in the same Hurwitz orbit. 
+  This confirms one case of a conjecture of Lewis and Reiner.},
+  arxiv = {2002.05102},
+  pdf = {https://arxiv.org/pdf/2002.05102.pdf},
+  year   = {2020}
+}
 
 
 @string{aps = {American Physical Society,}}
