--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,8 +1,6 @@
 ---
 ---
 
-\usepackage{amsmath}
-
 @unpublished{mathresearchwithcolin,
   author = {Colin Pirillo, Seth Sabar},
   title  = {Hurwitz Orbits of Equal Size},
@@ -27,7 +25,7 @@
   year   = {2020}
 }
 
-@article{
+@article{fordavarticle,
   author = {Brittany Pauley, Seth Sabar},
   title = {Oh, the Places We’ll Go: Why Education Is Pivotal for Launching a Self-Driving Service},
   link = {https://medium.com/self-driven/oh-the-places-well-go-why-education-is-pivotal-for-launching-a-self-driving-service-95b711e9cfed},
