--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,8 +16,8 @@
 
 @unpublished{mathresearchwithgwgroup,
   author = {Gaurav Gawankar, Dounia Lazreq, Mehr Rai, Seth Sabar},
-  title  = {Hurwitz Actions on Reflection Factorizations in Complex Reflection Group $G_6$},
-  abstract = {We show that in the complex reflection group $G_6$, reflection factorizations of a Coxeter 
+  title  = {Hurwitz Actions on Reflection Factorizations in Complex Reflection Group G6},
+  abstract = {We show that in the complex reflection group G6, reflection factorizations of a Coxeter 
   element that have the same length and multiset of conjugacy classes are in the same Hurwitz orbit. 
   This confirms one case of a conjecture of Lewis and Reiner.},
   arxiv = {2002.05102},
