--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,8 +26,9 @@
 }
 
 @article{fordavarticle,
-  author = {Brittany Pauley, Seth Sabar},
-  title = {Oh, the Places We’ll Go: Why Education Is Pivotal for Launching a Self-Driving Service},
-  link = {https://medium.com/self-driven/oh-the-places-well-go-why-education-is-pivotal-for-launching-a-self-driving-service-95b711e9cfed},
-  year = {2020}
+  author          = {Brittany Pauley, Seth Sabar},
+  title           = {Oh, the Places We’ll Go: Why Education Is Pivotal for Launching a Self-Driving Service},
+  url = {https://medium.com/self-driven/oh-the-places-well-go-why-education-is-pivotal-for-launching-a-self-driving-service-95b711e9cfed},
+  year            = {2020}
 }
+
