--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,8 @@
 ---
 ---
 
+\usepackage{url}
+
 @unpublished{mathresearchwithcolin,
   author = {Colin Pirillo, Seth Sabar},
   title  = {Hurwitz Orbits of Equal Size},
@@ -28,7 +30,7 @@
 @article{fordavarticle,
   author          = {Brittany Pauley, Seth Sabar},
   title           = {Oh, the Places We’ll Go: Why Education Is Pivotal for Launching a Self-Driving Service},
-  url = {https://medium.com/self-driven/oh-the-places-well-go-why-education-is-pivotal-for-launching-a-self-driving-service-95b711e9cfed},
+  howpublished={\url{https://medium.com/self-driven/oh-the-places-well-go-why-education-is-pivotal-for-launching-a-self-driving-service-95b711e9cfed}},
   year            = {2020}
 }
 
